# sentiment_analyse_system

./: CMakeLists.txt  config.json  config.yaml  main.cc
controllers/: AuthController.cc  AuthController.h  BatchSentimentController.cc  BatchSentimentController.h  CrawlerController.cc  CrawlerController.h  MainController.cc  MainController.cpp  MainController.h  SentimentController.cc  SentimentController.cpp  SentimentController.h
crawler_data/: 24284209.txt
frontend/: batch.html  crawler.html  dashboard.html  index.html  result.html  sentiment.html
frontend/auth/: login.html  register.html
models/: User.cc  User.h
scripts/: 36478801.txt  DoubanCommentCrawler.py
test/: CMakeLists.txt  test_main.cc
torch_infer/: torch_infer.cc  torch_infer.h
